Updated project documentation

--- a/index.html
+++ b/index.html
@@ -13,3 +13,4 @@ Temporary commit content 163
 Temporary commit content 181
 Temporary commit content 187
 Temporary commit content 197
+Temporary commit content 214
