Added validation for user input

--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@ Temporary commit content 60
 Temporary commit content 71
 Temporary commit content 76
 Temporary commit content 94
+Temporary commit content 112
